Fix board resizing on small screens

--- a/src/components/gameboard.scss
+++ b/src/components/gameboard.scss
@@ -41,6 +41,9 @@
   grid-gap: 5px;
   padding: 10px;
   box-sizing: border-box;
+  height: 100%;
+  max-height: 420px;
+  // width: 350px;
 }
 
 .c-game-row {
